<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="40dp">

        <TextView
            android:id="@+id/mortgagePrincipalAmountHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mortgage_principal_amount"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="75dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/mortgagePrincipalAmountInput"/>

        <EditText
            android:id="@+id/mortgagePrincipalAmountInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/mortgage_principal_amount"
            android:autofillHints="phone"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/mortgagePrincipalAmountHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/interestRateHeader"/>

        <TextView
            android:id="@+id/interestRateHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interest_rate"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/mortgagePrincipalAmountInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/interestRateInput"/>

        <EditText
            android:id="@+id/interestRateInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autofillHints="phone"
            android:padding="15dp"
            android:hint="@string/interest_hint"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/interestRateHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/amortizationPeriodHeader"/>

        <TextView
            android:id="@+id/amortizationPeriodHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amortization_period"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/interestRateInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/amortizationSpinner"/>

        <Spinner
            android:id="@+id/amortizationSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:layout_marginBottom="30dp"
            app:layout_constraintTop_toBottomOf="@id/amortizationPeriodHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/paymentFrequencyHeader"/>

        <TextView
            android:id="@+id/paymentFrequencyHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_frequency"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/amortizationSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/paymentSpinner"/>

        <TextView
            android:id="@+id/paymentSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:padding="15dp"
            android:text="@string/monthly"
            android:textStyle="bold"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/paymentFrequencyHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/calculateBtn"/>


        <Button
            android:id="@+id/calculateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calculate_mortgage"
            android:backgroundTint="@color/primary_color"
            app:layout_constraintTop_toBottomOf="@id/paymentSpinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/messageBox"
            />

        <TextView
            android:id="@+id/messageBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:padding="0dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/calculateBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/seeMoreBtn"
            />

        <Button
            android:id="@+id/seeMoreBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/see_more"
            android:backgroundTint="@color/primary_color"
            app:layout_constraintTop_toBottomOf="@id/messageBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>